Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8, 12.1(EOL), 12.2(EOL), 12.3
-
Unexpected results
-
Allow users with non-SELECT privileges to see rows in `INFORMATION_SCHEMA.TRIGGERS` table. `ACTION_CONDITION`, `ACTION_STATEMENT` and `DEFINER` columns are `NULL` unless the user is the owner of the schema or has `TRIGGER` privilege.
-
Q1/2026 Server Maintenance
Description
According the standard row with the trigger info showed if user has column privileges other than SELECT. We have following column privileges :
- INSERT
- REFERENCES (unused)
- SELECT
- UPDATE
To have all operation which has influence on a trigger we have to add DELETE and remove REFERENCES, i.e. in our case if user has: - DELETE
- INSERT
- UPDATE
Even if the user can see a row in the INFORMATION_SCHEMA.TRIGGERS, a user will only see NULL for ACTION_CONDITION and ACTION_STATEMENT, unless he's the owner of the schema. We do not have owners but use TRIGGER privilege instead. Now it control whole row appearance but should control only content of that two columns.
Attachments
Issue Links
- relates to
-
MDEV-36996 INFORMATION_SCHEMA.TRIGGERED_UPDATE_COLUMNS
-
- Closed
-